# SuperString

./: CMakeLists.txt  LICENSE  README.md
documentation/: index.html
documentation/css/: prismjs.v1.13.0.min.css  style.css
documentation/img/: text_line_split_bench_gen.py
documentation/js/: prismjs.v1.13.0.min.js
include/: SuperString.hh
src/: SuperString.cc
test/: CMakeLists.txt  bench_compare.cc  main.cc  test.txt  withSS.cc  withStd.cc
